k8s/overlays/dev/tolgee/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: tolgee
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 32002
